@@ -1,3 +1,12 @@
+2025-12-05T01:02:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19949098604 # 829
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 105 123 / 106 124
+* notice: next accum: outdated-unq outdated-all / unq all: 105 123 / 107 125
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-04]
+
 2025-11-29T00:58:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19776713927 # 823
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-29
